# codinginfinity.me

./: .gitignore  .htaccess  .travis.yml  README.md  Site.hs  codinginfinity.cabal  config.toml  deploy.sh  deploy.txt  netlify.toml  publish.bat  stack.yaml  web.config
.github/workflows/: publish.yml
content/drafts/: _index.md
content/posts/: 2015-04-18-haskell_and_cpp.md  2015-04-18-new_blog_new_journey.md  2015-04-26-hakyll_automatic_sitemap_generation.md  2015-05-10-localization_of_a_wpf_app_the_simple_approach.md  2015-07-12-hlibsass_and_hsass.md  2015-08-17-custom_sql_queries_in_groundhog.md  (+8 more)
css/: _base.scss  _layout.scss  _social.scss  _syntax.scss  _typography.scss
pages/: about_me.md  contact.md
posts/: 2015-04-18-haskell_and_cpp.md  2015-04-18-new_blog_new_journey.md  2015-04-26-hakyll_automatic_sitemap_generation.md  2015-05-10-localization_of_a_wpf_app_the_simple_approach.md  2015-07-12-hlibsass_and_hsass.md  2015-08-17-custom_sql_queries_in_groundhog.md  2016-08-19-fake_your_way_part1.md  2016-08-29-fake_your_way_part2.md  2017-03-18-fake_your_way_part3.md  2019-01-04-reverse_proxy_yourself_to_localhost_with_ssltls.md  2019-01-13-reverse_proxy_yourself_to_the_host.md  2019-10-11-devconf_2019.md
sass/: _content.scss  _layout.scss  _syntax.scss  styles.scss
src/: Paginator.hs  Rewriter.hs  Sass.hs  Site.hs  Sitemap.hs
static/: CNAME
syntaxes/: terraform.sublime-syntax
templates/: 404.html  analytics.html  default.html  draft.html  drafts_list.html  index.html  macros.html  metadata.html  page.html  paginator.html  post-list.html  post.html
(+9 files in other folders)
